test/corpus/nodes.txt
============
Tag
============

some-tag

---

(source_file
  (tag
    (tag_name)))


========================
Tag with classes
========================

some-tag.some-class.other-class

---

(source_file
  (tag
    (tag_name)
    (class)
    (class)))

========================
Tag with id
========================

some-tag#some-id

---

(source_file
  (tag
    (tag_name)
    (id)))

========================
Tag with attributes
========================

some-tag(attr, other-attr="test")

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute (attribute_name))
      (attribute (attribute_name) (quoted_attribute_value (attribute_value))))))

========================
Tag with content
=========================

some-tag(attr) content

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute (attribute_name)))
    (content)))

========================
Wrapped Tag with content
=========================

div.card: div.card-body content

---

(source_file
  (tag
    (tag_name)
    (class)
    (tag
      (tag_name)
      (class)
      (content)
    )
  )
)


========================
Tag with piped content
=========================

div
  |Content here

---

(source_file
  (tag
    (tag_name)
    (pipe_content (content))))

========================
Tag with multi-line piped content (WIP: how to merge the content+?)
=========================

div
  |Content here
  |more
  | content here,

---

(source_file
  (tag
    (tag_name)
    (pipe_content (content) (content) (content))))

========================
Tag with children
========================

some-tag
  child-one content
  child-two(attr)

---

(source_file
  (tag
    (tag_name)
    (children
      (tag
        (tag_name)
        (content))
      (tag
        (tag_name)
        (attributes
          (attribute (attribute_name)))))))

========================
Mixed example
========================

// some comment
some-tag.class-one(attr) the content
  sub-tag.some-slass
    sub-sub-tag content
  other-subtag#with-id.and-class(and-attr)

---

(source_file
  (comment)
  (tag
    (tag_name)
    (class)
    (attributes
      (attribute (attribute_name)))
    (content)
    (children
      (tag
        (tag_name)
        (class)
        (children
          (tag
            (tag_name)
            (content))))
      (tag
        (tag_name)
        (id)
        (class)
        (attributes
          (attribute (attribute_name)))))))

========================
Doctype html
========================

doctype html
html

---

(source_file
  (doctype
    (doctype_name)
  )
  (tag (tag_name))
)

========================
Doctype xml + encoding
========================

doctype xml ISO-8859-1

---

(source_file
  (doctype
    (doctype_name)
    (doctype_encoding)
  )
)

========================
Nodes with attributes without parens
========================

div foo="bar"

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute (attribute_name) (quoted_attribute_value (attribute_value))))))


========================
Nodes with whitespace operators
========================

div.foo<> foo="bar"

---

(source_file
  (tag
    (tag_name)
    (whitespace_left)
    (whitespace_right)
    (attributes
      (attribute (attribute_name) (quoted_attribute_value (attribute_value))))))

============
attributes with line breaks
============

some-tag(
  a="2"
  b="3"
)

---

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute (attribute_name) (quoted_attribute_value (attribute_value)))
      (attribute (attribute_name) (quoted_attribute_value (attribute_value)))
      )
    )
  )

